add some styles, add todo to list via ajax call to backend. resolves #1

--- a/public/tmpls/layout.html
+++ b/public/tmpls/layout.html
@@ -1,9 +1,10 @@
 <header>
-  <h1>ToDone Task Manager</h1>
+  <h1>DaBucketList</h1>
+  <h2>What do you <em>really</em> want to do?</h2>
 </header>
 <div id='container'>
   <!-- ko view: $view.currentView --><!-- /ko -->
 </div>
 <footer>
-  author Evan Sendra
+  <p>author Evan Sendra</p>
 </footer>
