--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ToDone Task Manager</title>
+    <title>DaBucketList</title>
     <link href="/stylesheets/application.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script><style type="text/css"></style><script src="/javascripts/knockout-3.1.0.js" type="text/javascript"></script><script src="/javascripts/falcon.js" type="text/javascript"></script><script src="/javascripts/falcon.jquery_adapter.min.js" type="text/javascript"></script><script src="/javascripts/application.js" type="text/javascript"></script>
   </head>
-  <head>
-    <title>ToDone Task Manager</title>
-  </head>
-  <body>
-    
-  </body>
+  <body></body>
 </html>
