add bootstrap and style changes

--- a/public/404.html
+++ b/public/404.html
@@ -6,11 +6,11 @@
         <style>
         html
         {
-					background: url(/images/kitten.png) no-repeat center center fixed;
-					-webkit-background-size: cover;
-					-moz-background-size: cover;
-					-o-background-size: cover;
-					background-size: cover;
+			background: url(/images/kitten.jpg) no-repeat center center fixed;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
         }
         </style>
     </head>
