make it pretty and add rspec tests

--- a/public/tmpls/layout.html
+++ b/public/tmpls/layout.html
@@ -1,10 +1,13 @@
 <header>
-  <h1>DaBucketList</h1>
-  <h2>What do you <em>really</em> want to do?</h2>
+  <h1>
+  	<img src="images/banner.png" alt="Da Bucket List"/>
+  </h1>
 </header>
-<div id='container'>
+<div id='container' class="rounded">
   <!-- ko view: $view.currentView --><!-- /ko -->
 </div>
 <footer>
-  <p>author Evan Sendra</p>
+	<div class="inner">
+	  <p>author Evan Sendra</p>
+	</div>
 </footer>
