--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,15 @@
 <html>
   <head>
     <title>DaBucketList</title>
-    <link href="/stylesheets/application.css" rel="stylesheet" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script><style type="text/css"></style><script src="/javascripts/knockout-3.1.0.js" type="text/javascript"></script><script src="/javascripts/falcon.js" type="text/javascript"></script><script src="/javascripts/falcon.jquery_adapter.min.js" type="text/javascript"></script><script src="/javascripts/application.js" type="text/javascript"></script>
+    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/stylesheets/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
+    <link href="/stylesheets/application.css" rel="stylesheet" type="text/css"/>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
+    <style type="text/css"></style><script src="/javascripts/knockout-3.1.0.js" type="text/javascript"></script>
+    <script src="/javascripts/falcon.js" type="text/javascript"></script>
+    <script src="/javascripts/falcon.jquery_adapter.min.js" type="text/javascript"></script>
+    <script src="/javascripts/application.js" type="text/javascript"></script>
   </head>
   <body></body>
 </html>
