--- a/public/tmpls/todos.html
+++ b/public/tmpls/todos.html
@@ -10,9 +10,9 @@
       <div class="todo">
         <div class="checkbox">
           <label>
-            <input type="checkbox" data-bind="checked: is_complete, event: {change: $view.toggleTodo}"/>
+            <input type="checkbox" data-bind="checked: is_complete, click: $view.toggleTodo"/>
               <!-- ko if: is_editing -->
-              <input class="form-control" data-bind="value: tmp_title" type="text"></input>
+              <input class="form-control" data-bind="value: tmp_title, click: function(){return false;}" type="text"></input>
               <a class="btn btn-default btn-sm" data-bind="click:$view.editTodo" href="#" role="button">Done</a>
               <!-- /ko -->
               <!-- ko ifnot: is_editing -->
